--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@ body {
     </style>
 </head>
 <body>
-    <h1>Мы делили апельсин,<br>много нас, а он один</h1>
+    <h1>лох</h1>
 </body>
 </html>
