--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="score">
+        <div>Игрок: <span id="playerScore">0</span></div>
+        <div>Бот: <span id="botScore">0</span></div>
+    </div>
     <div class="game-container">
         <div id="player1" class="paddle"></div>
         <div id="player2" class="paddle"></div>
