--- a/TON Pong.html
+++ b/TON Pong.html
@@ -62,7 +62,7 @@
     <script>
         // Инициализация TON Connect
         const connector = new TonConnectSDK.TonConnect({
-            manifestUrl: 'https://yourdomain.com/tonconnect-manifest.json'
+            manifestUrl: 'https://redmonkey2006.github.io/tonconnect-manifest.json'
         });
 
         // Проверка подключения при загрузке
@@ -106,7 +106,7 @@
             const transaction = {
                 validUntil: Date.now() + 300000,
                 messages: [{
-                    address: 'EQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAM9c', // Тестовый адрес
+                    address: 'UQDZtA8PMUAioyPaLLRNXNiONepDUwvzUqBhMg7RvHZchqjr', // Тестовый адрес
                     amount: '1000000' // 0.001 TON
                 }]
             };
