--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Telegram Кликер</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <!-- Исправь пути: -->
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="container">
@@ -42,6 +43,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <!-- Исправь путь: -->
+    <script src="./script.js"></script>
 </body>
 </html>
